# rtpghi

./: .clang-format  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  STYLE_GUIDE.md
.github/workflows/: ci.yml
examples/: basic_example.cpp  complete_workflow.cpp
examples/audio_example/: CMakeLists.txt
examples/audio_example/Source/: Main.cpp
include/rtpghi/: rtpghi.hpp
tests/: test_basic.cpp  test_benchmarks.cpp  test_gradient_matrix.cpp  test_gradients.cpp  test_heap.cpp  test_heap_benchmarks.cpp  test_rtpghi_advanced.cpp  test_rtpghi_algorithm.cpp  test_rtpghi_realworld.cpp  test_spectrum_gradients.cpp
